# ovningstavlan

./: README.md  pyproject.toml  se.danielnylander.ovningstavlan.desktop
.tx/: config
po/: ovningstavlan.pot  sv.mo  sv.po
src/ovningstavlan/: main.py
