[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "ovningstavlan"
version = "0.1.0"
description = "Practice board with visual feedback for children"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]
[project.gui-scripts]
ovningstavlan = "ovningstavlan.main:main"
[tool.setuptools.packages.find]
where = ["src"]
